This is the changelog for developers, != changelog for the end user 
that we distribute with the binaries. (see changelog)

25/12/2006
namespace
 - Brushplugin Version 2.0, supports multiple collapse modes and a materialignore list (namespace)
 - Camera movement speed changes. Increase speed = SHIFT+KP_PLUS, decrease speed = SHIFT+KP_MINUS.
   New option to link the strafe speed to camera movement speed (default: linked). (Shaderman)
 - Fixed bug in sample plugin (Shaderman)
 - Merry Christmas

17/12/2006
namespace
 - Radiant warzow-support (Topsun + Warzow-Mappers)

15/12/2006
namespace
 - Inverted bevel can be used with end caps (Topsun)
 - Removed needless .pdb files from win32 installer (Topsun)
 - Fixed .ase picomodel loader to load shaders again (Shaderman)
 - Removed translucent brushes fix because of wrong rendering behaviour on Linux
 - New cool(!) radiant icon by eb

13/12/2006
namespace
- Added tremoulus-support to q3map2

08/12/2006
namespace
- Entity names are now drawn for group entities in Doom3 and Quake 3 mode (namespace)
- Fixed translucent brushes becoming invisible when selected (Shaderman)

06/11/2006
namespace
- (TODO) Texture sizes sometimes vary wildly. New texture browser option: View -> Fixed Size.
  Code parts taken from DarkRadiant. (Shaderman)
- Added new texture browser option: View -> Hide Image Missing. (Shaderman)
- Fixed new D3 lights don't have a light_radius key. (Shaderman)
- Fixed hotkey collision (paste to camera/view menu). New View shortcut = ALT+W. (Shaderman)
- Fixed .wad MMB 3d view texture selection bug. (Shaderman)

04/11/2006
namespace
- Added warzow-support to q3map2

12/10/2006
namespace
- Updated help menu web links (removed map-center.com, added ETB documentation) (Shaderman)
- Added check for existing worldspawn if a new one should be added with the entity menu (Shaderman)
- Fixed Entity -> Ungroup (Topsun)
- Fixed hotkey collision ALT+M (filter botclip/Modify menu). New Modify shortcut = ALT+O (Shaderman)