@@ -1,0 +1,13 @@
+<?xml version="1.0"?>
+<component>
+  <dir name="games">
+    <file name="ufoai.game"/>
+  </dir>
+  <dir name="ufoai.game">
+    <file name="default_build_menu.xml"/>
+    <file name="game.xlink"/>
+    <dir name="base">
+      <file name="entities.def"/>
+    </dir>
+ </dir>
+</component>
